Fixed issues related to the accesstransformer

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,3 +10,13 @@ public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j # STRUCTU
 public-f net.minecraft.world.biome.BiomeGenerationSettings field_242485_g # structures
 
 public-f net.minecraft.world.biome.provider.BiomeProvider field_226837_c_ # biomes
+
+public net.minecraft.world.level.levelgen.SurfaceRules$SequenceRuleSource
+public net.minecraft.server.MinecraftServer$C_203249_
+public net.minecraft.world.level.levelgen.SurfaceRules$Context
+public net.minecraft.world.level.levelgen.SurfaceRules$Condition
+public net.minecraft.world.level.levelgen.SurfaceRules$SurfaceRule
+public net.minecraft.world.level.levelgen.SurfaceRules$LazyXZCondition
+public net.minecraft.world.level.levelgen.SurfaceRules$LazyCondition
+public net.minecraft.world.level.levelgen.SurfaceRules$SequenceRuleSource
+public net.minecraft.client.Minecraft$ExperimentalDialogType
