Changed modid from betterend to betterendforge and fixed patchouli crash

--- a/src/main/resources/data/betterendforge/patchouli_books/guidebook/en_us/categories/biomes.json
+++ b/src/main/resources/data/betterendforge/patchouli_books/guidebook/en_us/categories/biomes.json
@@ -1,5 +1,5 @@
 {
     "name": "Biomes",
     "description": "Work in progress...",
-    "icon": "betterend:end_mycelium"
+    "icon": "betterendforge:end_mycelium"
 }
