--- a/src/main/resources/data/betterendforge/patchouli_books/guidebook/de_de/categories/biomes.json
+++ b/src/main/resources/data/betterendforge/patchouli_books/guidebook/de_de/categories/biomes.json
@@ -1,5 +1,5 @@
 {
     "name": "Biome",
     "description": "Bald verfügabr...",
-    "icon": "betterend:end_mycelium"
+    "icon": "betterendforge:end_mycelium"
 }
