--- a/src/main/resources/data/betterendforge/patchouli_books/guidebook/es_es/categories/biomes.json
+++ b/src/main/resources/data/betterendforge/patchouli_books/guidebook/es_es/categories/biomes.json
@@ -1,5 +1,5 @@
 {
     "name": "Biomas",
     "description": "En progreso...",
-    "icon": "betterend:end_mycelium"
+    "icon": "betterendforge:end_mycelium"
 }
