--- a/src/main/resources/data/betterendforge/patchouli_books/guidebook/ko_kr/categories/biomes.json
+++ b/src/main/resources/data/betterendforge/patchouli_books/guidebook/ko_kr/categories/biomes.json
@@ -1,5 +1,5 @@
 {
     "name": "생물군계",
     "description": "작업 중...",
-    "icon": "betterend:end_mycelium"
+    "icon": "betterendforge:end_mycelium"
 }
