Changed mod version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 # Better End Forge
 modid=betterendforge
 author=TeamRemastered
-version=3.0R
+version=1.0A
 minecraft_version=1.18.2
 mapping_version=2022.08.07-1.18.2
 forge_version=40.2.0
