modified ARMOR_MODIFIER_UUID_PER_SLOT access modifiers

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,6 +11,8 @@ public-f net.minecraft.world.biome.BiomeGenerationSettings field_242485_g # stru
 
 public-f net.minecraft.world.biome.provider.BiomeProvider field_226837_c_ # biomes
 
+protected net.minecraft.world.item.ArmorItem f_40380_ # ARMOR_MODIFIER_UUID_PER_SLOT
+
 public net.minecraft.world.level.levelgen.SurfaceRules$SequenceRuleSource
 public net.minecraft.server.MinecraftServer$C_203249_
 public net.minecraft.world.level.levelgen.SurfaceRules$Context
